--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<mat-toolbar color="primary">
-  <button>
-    <mat-icon>menu</mat-icon>
-  </button>
-  <ng-content></ng-content>
-</mat-toolbar>
+<wmat-toolbar>Bookmarker</wmat-toolbar>
