--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <mat-form-field class="example-full-width">
       <mat-icon aria-hidden="false" aria-label="Search" fontIcon="search"></mat-icon>
 
-      <input matInput placeholder="Filter bookmarks..." value="Sushi" [ngModel]="searchText" (ngModelChange)="onSearch($event)">
+      <input matInput placeholder="Filter bookmarks..." value="Sushi" [(ngModel)]="searchText" (ngModelChange)="onSearch($event)">
     </mat-form-field>
     <span class="example-spacer"></span>
   </mat-toolbar-row>
