--- a/src/app/components/add-edit-bookmark/add-edit-bookmark.component.html
+++ b/src/app/components/add-edit-bookmark/add-edit-bookmark.component.html
@@ -16,7 +16,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button type="reset"  mat-raised-button routerLink="/">CANCEL</button>
+      <button type="reset"  mat-raised-button (click)="onCancel()">CANCEL</button>
       <button type="submit" mat-raised-button color="primary">SAVE</button>
     </mat-card-actions>
   </mat-card>
