wip bookmarker structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<wmat-toolbar routerLink="/">Bookmarker</wmat-toolbar>-->
-<mat-toolbar color="primary"  >
+<mat-toolbar>
   <mat-toolbar-row>
   <span>
      Bookmarker
