--- a/src/app/components/add-edit-bookmark/add-edit-bookmark.component.html
+++ b/src/app/components/add-edit-bookmark/add-edit-bookmark.component.html
@@ -7,15 +7,24 @@
     </mat-card-header>
     <mat-card-content>
 
-      <mat-form-field>
-        <input matInput placeholder="Name" formControlName="name"/>
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="URL" formControlName="url"/>
-      </mat-form-field>
+      <table class="input-full-width">
+        <tr>
+          <td>
+            <mat-form-field class="input-full-width">
+              <mat-label>Name</mat-label>
+              <input matInput placeholder="Name" formControlName="name"/>
+            </mat-form-field>
+          </td>
+          <td>
+            <mat-form-field class="input-full-width">
+              <mat-label>Url</mat-label>
+              <input matInput placeholder="URL" formControlName="url"/>
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
     </mat-card-content>
-    <mat-card-actions>
+    <mat-card-actions class="action-buttons">
       <button type="reset" mat-raised-button (click)="onCancel()">CANCEL</button>
       <button type="submit" mat-raised-button color="primary">SAVE</button>
     </mat-card-actions>
