--- a/src/app/modules/bookmarker/components/add-edit-bookmark/add-edit-bookmark.component.html
+++ b/src/app/modules/bookmarker/components/add-edit-bookmark/add-edit-bookmark.component.html
@@ -2,30 +2,31 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>
-        {{ isAddMode ? 'Create New Bookmark' : 'Edit Existing Bookmark' }}
+        {{ isAddMode ? "Create New Bookmark" : "Edit Existing Bookmark" }}
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-
       <table class="input-full-width">
         <tr>
           <td>
             <mat-form-field class="input-full-width">
               <mat-label>Name</mat-label>
-              <input matInput placeholder="Name" formControlName="name"/>
+              <input matInput placeholder="Name" formControlName="name" />
             </mat-form-field>
           </td>
           <td>
             <mat-form-field class="input-full-width">
               <mat-label>Url</mat-label>
-              <input matInput placeholder="URL" formControlName="url"/>
+              <input matInput placeholder="URL" formControlName="url" />
             </mat-form-field>
           </td>
         </tr>
       </table>
     </mat-card-content>
     <mat-card-actions class="action-buttons">
-      <button type="reset" mat-raised-button (click)="onCancel()">CANCEL</button>
+      <button type="reset" mat-raised-button (click)="onCancel()">
+        CANCEL
+      </button>
       <button type="submit" mat-raised-button color="primary">SAVE</button>
     </mat-card-actions>
   </mat-card>
